<resources>

    <!-- Leaderboard Activity Strings -->
    <string name="app_name">GroupProjectPlayground</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="workout_challenge">Workout Challenge</string>
    <string name="sort_by">Sort by:</string>
    <string name="bp_enum">Bench Press</string>
    <string name="curl_enum">Curl</string>
    <string name="none_enum">None</string>
    <string name="run_enum">Run</string>
    <string name="pushUp_enum">Push up</string>
    <string name="squat_enum">Squat</string>
    <string name="swim_enum">Swim</string>
    <string name="rank">Rank</string>
    <string name="player">Player</string>
    <string name="back_button">Back</string>
    <string name="trophy_icon">Trophy</string>
    <string name="no_data">No Data</string>
    <string name="no_players_yet">No players have completed this workout yet</string>

    <!-- Login Activity Strings -->
    <string name="fitness_tracker">Fitness Tracker</string>
    <string name="get_fit_stay_motivated">Get Fit, Stay Motivated</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login or sign up to continue</string>
    <string name="username">Username</string>
    <string name="email">Email (Only if signing up)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="app_logo">App Logo</string>

    <!-- Failed Login Activity Strings -->
    <string name="login_failed">Login Failed</string>
    <string name="user_exists_wrong_password">An incorrect password was entered for the following username:</string>
    <string name="error_icon">Error Icon</string>
    <string name="back_to_login">Back to Login</string>
    <string name="suggestions">Suggestions:</string>
    <string name="check_password">Double-check your password</string>
    <string name="check_caps_lock">Make sure Caps Lock is off</string>

    <!-- Exercise Logger Activity Strings -->
    <string name="filler_description">filler_description</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="timer_text">30:00</string>
    <string name="increase_reps">Increase Reps</string>
    <string name="high_score">High Score</string>
    <string name="current_score">Current Score</string>
    <string name="workout_finished">Workout Finished</string>
    <string name="increase_reps_btn_test">Add %1$s</string>
    <string name="personal_best">Personal Best</string>
    <string name="empty_score_value">%1$d</string>

    <!--    LeaderboardAdapter Strings-->
    <string name="tvUsername_text_you">%1$s (You)</string>

    <!--    Select Workout Activity Strings-->
    <string name="Swim">Swim</string>
    <string name="select_exercise">Select Exercise</string>

    <!--    DashboardActivity Strings-->
    <string name="main_menu_title">My Fitness Journey</string>
    <string name="welcome">Welcome!</string>
    <string name="personal_bests">Your Personal Bests</string>
    <string name="play_game">PLAY GAME</string>
    <string name="bench_press">🏋️ Bench Press</string>
    <string name="curl">💪 Curl</string>
    <string name="pushUp">💪 Push-up</string>
    <string name="running">🏃 Run</string>
    <string name="squat">🏋️ Squat</string>
    <string name="swim">🏊‍♀️️ Swim</string>
    <string name="default_best">0</string>
    <string name="fitness_journey_welcome">Welcome to your fitness journey!</string>
    <string name="my_fitness_journey">My Fitness Journey</string>
    <string name="named_welcome">Welcome, %1$s</string>

</resources>